# filler

./: CMakeLists.txt  README.md  a.out  draw_lines_color.c  filler.trace  filler_func.h  filler_visualizer  find_optimal_place.c  first_step.c  ft_filler.h  ft_makevec.c  init.c  jziemann3.filler  main.c  map_creater.c  parse.c  test  vis.img  vis1.img  vis2.img  visualizer.h
filler/: Makefile  filler.trace
filler/includes/: filler_func.h
filler/players/: jziemann.filler
filler/src/: find_optimal_place.c  first_step.c  ft_makevec.c  map_creater.c  max_area.c
filler/visualizer/: Makefile  filler_visualizer
filler/visualizer/includes/: visualizer.h
filler/visualizer/src/: map_creater.c  parse_start_game.c
ft_vector/: Header.h  ft_makevec.c  ft_vector.h  main.c
ft_vector.xcodeproj/: project.pbxproj
ft_vector.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ft_vector.xcodeproj/xcuserdata/vera.xcuserdatad/xcschemes/: xcschememanagement.plist
libft/: ft_find_word.c  ft_strcpy.c  get_next_line.c  libft.h
players/: a.out  jziemann.filler  jziemann1.filler
src/: main.c  parse.c
visualizer/: author
visualizer/includes/: visualizer.h
visualizer/libft/: Makefile
visualizer/src/: area.c  draw_helper.c  draw_lines_color.c  ft_game.c  ft_makevec.c  init.c  main.c  print_string.c  token_manipulation.c
word_embeddings/: vectors_embeddings.pages  word_embeddings.md.html  word_embeddings.pages
